// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Db query Get FlightLog tests getAllFlightLogs between start and end date should match snapshot 1`] = `
[
  {
    "aircraft_registration": "OH-STL",
    "arrival_airport": "EFHK",
    "billable_member_id": 4,
    "billing_remarks": "N/A",
    "captain": "Salminen",
    "copilot": null,
    "created_at": 2025-03-23T19:58:09.713Z,
    "created_by": "user3",
    "departure_airport": "EFHK",
    "flight_date": 2025-03-02T22:00:00.000Z,
    "flight_id": 3,
    "flight_type": "Private",
    "fuel_uplift_litres": "40.00",
    "instrument_hours": "00:30:00",
    "invoice_number": null,
    "is_billed": false,
    "landing_time_utc": "12:00:00",
    "night_hours": "00:20:00",
    "number_of_landings": 1,
    "off_block_time_utc": "10:20:00",
    "oil_uplift_litres": "1.00",
    "on_block_time_utc": "10:00:00",
    "persons_on_board": 3,
    "remarks": "Routine check",
    "takeoff_time_utc": "10:30:00",
    "updated_at": 2025-03-23T19:58:09.713Z,
    "updated_by": "user3",
  },
  {
    "aircraft_registration": "OH-P28",
    "arrival_airport": "EFHK",
    "billable_member_id": 2,
    "billing_remarks": "N/A",
    "captain": "Järvinen",
    "copilot": "Heikkinen",
    "created_at": 2025-03-23T19:58:09.713Z,
    "created_by": "user4",
    "departure_airport": "EFHK",
    "flight_date": 2025-03-03T22:00:00.000Z,
    "flight_id": 4,
    "flight_type": "Cargo",
    "fuel_uplift_litres": "55.00",
    "instrument_hours": "01:15:00",
    "invoice_number": "INV003",
    "is_billed": true,
    "landing_time_utc": "13:00:00",
    "night_hours": "01:00:00",
    "number_of_landings": 3,
    "off_block_time_utc": "11:15:00",
    "oil_uplift_litres": "1.20",
    "on_block_time_utc": "11:00:00",
    "persons_on_board": 5,
    "remarks": "Cargo delivery",
    "takeoff_time_utc": "11:30:00",
    "updated_at": 2025-03-23T19:58:09.713Z,
    "updated_by": "user4",
  },
  {
    "aircraft_registration": "OH-IHQ",
    "arrival_airport": "EFHK",
    "billable_member_id": 5,
    "billing_remarks": "N/A",
    "captain": "Korhonen",
    "copilot": null,
    "created_at": 2025-03-23T19:58:09.713Z,
    "created_by": "user5",
    "departure_airport": "EFHK",
    "flight_date": 2025-03-04T22:00:00.000Z,
    "flight_id": 5,
    "flight_type": "Passenger",
    "fuel_uplift_litres": "70.00",
    "instrument_hours": "01:00:00",
    "invoice_number": "INV004",
    "is_billed": true,
    "landing_time_utc": "14:00:00",
    "night_hours": "00:50:00",
    "number_of_landings": 2,
    "off_block_time_utc": "12:10:00",
    "oil_uplift_litres": "1.80",
    "on_block_time_utc": "12:00:00",
    "persons_on_board": 6,
    "remarks": "Passenger transport",
    "takeoff_time_utc": "12:20:00",
    "updated_at": 2025-03-23T19:58:09.713Z,
    "updated_by": "user5",
  },
]
`;

exports[`Db query Get FlightLog tests getAllFlightLogs for end date should match snapshot 1`] = `
[
  {
    "aircraft_registration": "OH-STL",
    "arrival_airport": "EFHK",
    "billable_member_id": 1,
    "billing_remarks": "N/A",
    "captain": "Virtanen",
    "copilot": "Nieminen",
    "created_at": 2025-03-23T19:58:09.713Z,
    "created_by": "user1",
    "departure_airport": "EFHK",
    "flight_date": 2025-02-28T22:00:00.000Z,
    "flight_id": 1,
    "flight_type": "Training",
    "fuel_uplift_litres": "50.00",
    "instrument_hours": "00:45:00",
    "invoice_number": "INV001",
    "is_billed": true,
    "landing_time_utc": "10:00:00",
    "night_hours": "00:30:00",
    "number_of_landings": 1,
    "off_block_time_utc": "08:15:00",
    "oil_uplift_litres": "1.50",
    "on_block_time_utc": "08:00:00",
    "persons_on_board": 4,
    "remarks": "Smooth flight",
    "takeoff_time_utc": "08:30:00",
    "updated_at": 2025-03-23T19:58:09.713Z,
    "updated_by": "user1",
  },
  {
    "aircraft_registration": "OH-IHQ",
    "arrival_airport": "EFTP",
    "billable_member_id": 3,
    "billing_remarks": "N/A",
    "captain": "Lahtinen",
    "copilot": "Koskinen",
    "created_at": 2025-03-23T19:58:09.713Z,
    "created_by": "user2",
    "departure_airport": "EFHK",
    "flight_date": 2025-03-01T22:00:00.000Z,
    "flight_id": 2,
    "flight_type": "Commercial",
    "fuel_uplift_litres": "60.00",
    "instrument_hours": "01:00:00",
    "invoice_number": "INV002",
    "is_billed": true,
    "landing_time_utc": "11:00:00",
    "night_hours": "00:45:00",
    "number_of_landings": 2,
    "off_block_time_utc": "09:10:00",
    "oil_uplift_litres": "2.00",
    "on_block_time_utc": "09:00:00",
    "persons_on_board": 2,
    "remarks": "Training flight",
    "takeoff_time_utc": "09:20:00",
    "updated_at": 2025-03-23T19:58:09.713Z,
    "updated_by": "user2",
  },
  {
    "aircraft_registration": "OH-STL",
    "arrival_airport": "EFHK",
    "billable_member_id": 4,
    "billing_remarks": "N/A",
    "captain": "Salminen",
    "copilot": null,
    "created_at": 2025-03-23T19:58:09.713Z,
    "created_by": "user3",
    "departure_airport": "EFHK",
    "flight_date": 2025-03-02T22:00:00.000Z,
    "flight_id": 3,
    "flight_type": "Private",
    "fuel_uplift_litres": "40.00",
    "instrument_hours": "00:30:00",
    "invoice_number": null,
    "is_billed": false,
    "landing_time_utc": "12:00:00",
    "night_hours": "00:20:00",
    "number_of_landings": 1,
    "off_block_time_utc": "10:20:00",
    "oil_uplift_litres": "1.00",
    "on_block_time_utc": "10:00:00",
    "persons_on_board": 3,
    "remarks": "Routine check",
    "takeoff_time_utc": "10:30:00",
    "updated_at": 2025-03-23T19:58:09.713Z,
    "updated_by": "user3",
  },
  {
    "aircraft_registration": "OH-P28",
    "arrival_airport": "EFHK",
    "billable_member_id": 2,
    "billing_remarks": "N/A",
    "captain": "Järvinen",
    "copilot": "Heikkinen",
    "created_at": 2025-03-23T19:58:09.713Z,
    "created_by": "user4",
    "departure_airport": "EFHK",
    "flight_date": 2025-03-03T22:00:00.000Z,
    "flight_id": 4,
    "flight_type": "Cargo",
    "fuel_uplift_litres": "55.00",
    "instrument_hours": "01:15:00",
    "invoice_number": "INV003",
    "is_billed": true,
    "landing_time_utc": "13:00:00",
    "night_hours": "01:00:00",
    "number_of_landings": 3,
    "off_block_time_utc": "11:15:00",
    "oil_uplift_litres": "1.20",
    "on_block_time_utc": "11:00:00",
    "persons_on_board": 5,
    "remarks": "Cargo delivery",
    "takeoff_time_utc": "11:30:00",
    "updated_at": 2025-03-23T19:58:09.713Z,
    "updated_by": "user4",
  },
  {
    "aircraft_registration": "OH-IHQ",
    "arrival_airport": "EFHK",
    "billable_member_id": 5,
    "billing_remarks": "N/A",
    "captain": "Korhonen",
    "copilot": null,
    "created_at": 2025-03-23T19:58:09.713Z,
    "created_by": "user5",
    "departure_airport": "EFHK",
    "flight_date": 2025-03-04T22:00:00.000Z,
    "flight_id": 5,
    "flight_type": "Passenger",
    "fuel_uplift_litres": "70.00",
    "instrument_hours": "01:00:00",
    "invoice_number": "INV004",
    "is_billed": true,
    "landing_time_utc": "14:00:00",
    "night_hours": "00:50:00",
    "number_of_landings": 2,
    "off_block_time_utc": "12:10:00",
    "oil_uplift_litres": "1.80",
    "on_block_time_utc": "12:00:00",
    "persons_on_board": 6,
    "remarks": "Passenger transport",
    "takeoff_time_utc": "12:20:00",
    "updated_at": 2025-03-23T19:58:09.713Z,
    "updated_by": "user5",
  },
]
`;

exports[`Db query Get FlightLog tests getAllFlightLogs for specific member id should match snapshot 1`] = `
[
  {
    "aircraft_registration": "OH-STL",
    "arrival_airport": "EFHK",
    "billable_member_id": 1,
    "billing_remarks": "N/A",
    "captain": "Virtanen",
    "copilot": "Nieminen",
    "created_at": 2025-03-23T19:58:09.713Z,
    "created_by": "user1",
    "departure_airport": "EFHK",
    "flight_date": 2025-02-28T22:00:00.000Z,
    "flight_id": 1,
    "flight_type": "Training",
    "fuel_uplift_litres": "50.00",
    "instrument_hours": "00:45:00",
    "invoice_number": "INV001",
    "is_billed": true,
    "landing_time_utc": "10:00:00",
    "night_hours": "00:30:00",
    "number_of_landings": 1,
    "off_block_time_utc": "08:15:00",
    "oil_uplift_litres": "1.50",
    "on_block_time_utc": "08:00:00",
    "persons_on_board": 4,
    "remarks": "Smooth flight",
    "takeoff_time_utc": "08:30:00",
    "updated_at": 2025-03-23T19:58:09.713Z,
    "updated_by": "user1",
  },
]
`;

exports[`Db query Get FlightLog tests getAllFlightLogs for specified aircraft should match snapshot 1`] = `
[
  {
    "aircraft_registration": "OH-STL",
    "arrival_airport": "EFHK",
    "billable_member_id": 1,
    "billing_remarks": "N/A",
    "captain": "Virtanen",
    "copilot": "Nieminen",
    "created_at": 2025-03-23T19:58:09.713Z,
    "created_by": "user1",
    "departure_airport": "EFHK",
    "flight_date": 2025-02-28T22:00:00.000Z,
    "flight_id": 1,
    "flight_type": "Training",
    "fuel_uplift_litres": "50.00",
    "instrument_hours": "00:45:00",
    "invoice_number": "INV001",
    "is_billed": true,
    "landing_time_utc": "10:00:00",
    "night_hours": "00:30:00",
    "number_of_landings": 1,
    "off_block_time_utc": "08:15:00",
    "oil_uplift_litres": "1.50",
    "on_block_time_utc": "08:00:00",
    "persons_on_board": 4,
    "remarks": "Smooth flight",
    "takeoff_time_utc": "08:30:00",
    "updated_at": 2025-03-23T19:58:09.713Z,
    "updated_by": "user1",
  },
  {
    "aircraft_registration": "OH-STL",
    "arrival_airport": "EFHK",
    "billable_member_id": 4,
    "billing_remarks": "N/A",
    "captain": "Salminen",
    "copilot": null,
    "created_at": 2025-03-23T19:58:09.713Z,
    "created_by": "user3",
    "departure_airport": "EFHK",
    "flight_date": 2025-03-02T22:00:00.000Z,
    "flight_id": 3,
    "flight_type": "Private",
    "fuel_uplift_litres": "40.00",
    "instrument_hours": "00:30:00",
    "invoice_number": null,
    "is_billed": false,
    "landing_time_utc": "12:00:00",
    "night_hours": "00:20:00",
    "number_of_landings": 1,
    "off_block_time_utc": "10:20:00",
    "oil_uplift_litres": "1.00",
    "on_block_time_utc": "10:00:00",
    "persons_on_board": 3,
    "remarks": "Routine check",
    "takeoff_time_utc": "10:30:00",
    "updated_at": 2025-03-23T19:58:09.713Z,
    "updated_by": "user3",
  },
]
`;

exports[`Db query Get FlightLog tests getAllFlightLogs for start date should match snapshot 1`] = `
[
  {
    "aircraft_registration": "OH-IHQ",
    "arrival_airport": "EFHK",
    "billable_member_id": 5,
    "billing_remarks": "N/A",
    "captain": "Korhonen",
    "copilot": null,
    "created_at": 2025-03-23T19:58:09.713Z,
    "created_by": "user5",
    "departure_airport": "EFHK",
    "flight_date": 2025-03-04T22:00:00.000Z,
    "flight_id": 5,
    "flight_type": "Passenger",
    "fuel_uplift_litres": "70.00",
    "instrument_hours": "01:00:00",
    "invoice_number": "INV004",
    "is_billed": true,
    "landing_time_utc": "14:00:00",
    "night_hours": "00:50:00",
    "number_of_landings": 2,
    "off_block_time_utc": "12:10:00",
    "oil_uplift_litres": "1.80",
    "on_block_time_utc": "12:00:00",
    "persons_on_board": 6,
    "remarks": "Passenger transport",
    "takeoff_time_utc": "12:20:00",
    "updated_at": 2025-03-23T19:58:09.713Z,
    "updated_by": "user5",
  },
]
`;

exports[`Db query Get FlightLog tests getAllFlightLogs with Captain and copilot should return filtered logs 1`] = `
[
  {
    "aircraft_registration": "OH-STL",
    "arrival_airport": "EFHK",
    "billable_member_id": 1,
    "billing_remarks": "N/A",
    "captain": "Virtanen",
    "copilot": "Nieminen",
    "created_at": 2025-03-23T19:58:09.713Z,
    "created_by": "user1",
    "departure_airport": "EFHK",
    "flight_date": 2025-02-28T22:00:00.000Z,
    "flight_id": 1,
    "flight_type": "Training",
    "fuel_uplift_litres": "50.00",
    "instrument_hours": "00:45:00",
    "invoice_number": "INV001",
    "is_billed": true,
    "landing_time_utc": "10:00:00",
    "night_hours": "00:30:00",
    "number_of_landings": 1,
    "off_block_time_utc": "08:15:00",
    "oil_uplift_litres": "1.50",
    "on_block_time_utc": "08:00:00",
    "persons_on_board": 4,
    "remarks": "Smooth flight",
    "takeoff_time_utc": "08:30:00",
    "updated_at": 2025-03-23T19:58:09.713Z,
    "updated_by": "user1",
  },
]
`;

exports[`Db query Get FlightLog tests getAllFlightLogs with no params should return all logs 1`] = `
[
  {
    "aircraft_registration": "OH-STL",
    "arrival_airport": "EFHK",
    "billable_member_id": 1,
    "billing_remarks": "N/A",
    "captain": "Virtanen",
    "copilot": "Nieminen",
    "created_at": 2025-03-23T19:58:09.713Z,
    "created_by": "user1",
    "departure_airport": "EFHK",
    "flight_date": 2025-02-28T22:00:00.000Z,
    "flight_id": 1,
    "flight_type": "Training",
    "fuel_uplift_litres": "50.00",
    "instrument_hours": "00:45:00",
    "invoice_number": "INV001",
    "is_billed": true,
    "landing_time_utc": "10:00:00",
    "night_hours": "00:30:00",
    "number_of_landings": 1,
    "off_block_time_utc": "08:15:00",
    "oil_uplift_litres": "1.50",
    "on_block_time_utc": "08:00:00",
    "persons_on_board": 4,
    "remarks": "Smooth flight",
    "takeoff_time_utc": "08:30:00",
    "updated_at": 2025-03-23T19:58:09.713Z,
    "updated_by": "user1",
  },
  {
    "aircraft_registration": "OH-IHQ",
    "arrival_airport": "EFTP",
    "billable_member_id": 3,
    "billing_remarks": "N/A",
    "captain": "Lahtinen",
    "copilot": "Koskinen",
    "created_at": 2025-03-23T19:58:09.713Z,
    "created_by": "user2",
    "departure_airport": "EFHK",
    "flight_date": 2025-03-01T22:00:00.000Z,
    "flight_id": 2,
    "flight_type": "Commercial",
    "fuel_uplift_litres": "60.00",
    "instrument_hours": "01:00:00",
    "invoice_number": "INV002",
    "is_billed": true,
    "landing_time_utc": "11:00:00",
    "night_hours": "00:45:00",
    "number_of_landings": 2,
    "off_block_time_utc": "09:10:00",
    "oil_uplift_litres": "2.00",
    "on_block_time_utc": "09:00:00",
    "persons_on_board": 2,
    "remarks": "Training flight",
    "takeoff_time_utc": "09:20:00",
    "updated_at": 2025-03-23T19:58:09.713Z,
    "updated_by": "user2",
  },
  {
    "aircraft_registration": "OH-STL",
    "arrival_airport": "EFHK",
    "billable_member_id": 4,
    "billing_remarks": "N/A",
    "captain": "Salminen",
    "copilot": null,
    "created_at": 2025-03-23T19:58:09.713Z,
    "created_by": "user3",
    "departure_airport": "EFHK",
    "flight_date": 2025-03-02T22:00:00.000Z,
    "flight_id": 3,
    "flight_type": "Private",
    "fuel_uplift_litres": "40.00",
    "instrument_hours": "00:30:00",
    "invoice_number": null,
    "is_billed": false,
    "landing_time_utc": "12:00:00",
    "night_hours": "00:20:00",
    "number_of_landings": 1,
    "off_block_time_utc": "10:20:00",
    "oil_uplift_litres": "1.00",
    "on_block_time_utc": "10:00:00",
    "persons_on_board": 3,
    "remarks": "Routine check",
    "takeoff_time_utc": "10:30:00",
    "updated_at": 2025-03-23T19:58:09.713Z,
    "updated_by": "user3",
  },
  {
    "aircraft_registration": "OH-P28",
    "arrival_airport": "EFHK",
    "billable_member_id": 2,
    "billing_remarks": "N/A",
    "captain": "Järvinen",
    "copilot": "Heikkinen",
    "created_at": 2025-03-23T19:58:09.713Z,
    "created_by": "user4",
    "departure_airport": "EFHK",
    "flight_date": 2025-03-03T22:00:00.000Z,
    "flight_id": 4,
    "flight_type": "Cargo",
    "fuel_uplift_litres": "55.00",
    "instrument_hours": "01:15:00",
    "invoice_number": "INV003",
    "is_billed": true,
    "landing_time_utc": "13:00:00",
    "night_hours": "01:00:00",
    "number_of_landings": 3,
    "off_block_time_utc": "11:15:00",
    "oil_uplift_litres": "1.20",
    "on_block_time_utc": "11:00:00",
    "persons_on_board": 5,
    "remarks": "Cargo delivery",
    "takeoff_time_utc": "11:30:00",
    "updated_at": 2025-03-23T19:58:09.713Z,
    "updated_by": "user4",
  },
  {
    "aircraft_registration": "OH-IHQ",
    "arrival_airport": "EFHK",
    "billable_member_id": 5,
    "billing_remarks": "N/A",
    "captain": "Korhonen",
    "copilot": null,
    "created_at": 2025-03-23T19:58:09.713Z,
    "created_by": "user5",
    "departure_airport": "EFHK",
    "flight_date": 2025-03-04T22:00:00.000Z,
    "flight_id": 5,
    "flight_type": "Passenger",
    "fuel_uplift_litres": "70.00",
    "instrument_hours": "01:00:00",
    "invoice_number": "INV004",
    "is_billed": true,
    "landing_time_utc": "14:00:00",
    "night_hours": "00:50:00",
    "number_of_landings": 2,
    "off_block_time_utc": "12:10:00",
    "oil_uplift_litres": "1.80",
    "on_block_time_utc": "12:00:00",
    "persons_on_board": 6,
    "remarks": "Passenger transport",
    "takeoff_time_utc": "12:20:00",
    "updated_at": 2025-03-23T19:58:09.713Z,
    "updated_by": "user5",
  },
]
`;

exports[`Db query member tests getMember should return member data for a valid email address 1`] = `
{
  "billingId": "BILL001",
  "canMakeReservations": true,
  "createdAt": Any<String>,
  "createdBy": "admin",
  "dateOfBirth": Any<String>,
  "email": "matti.virtanen@example.com",
  "emailVerifiedAt": undefined,
  "firstName": "Matti",
  "iceContactName": "Liisa Virtanen",
  "iceContactPhoneNumber": "0407654321",
  "isTrainingProgramPilot": false,
  "lastName": "Virtanen",
  "memberId": 1,
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "phoneNumber": "0401234567",
  "postcode": "00100",
  "roles": [
    "USER",
    "INSTRUCTOR",
  ],
  "streetAddress": "Keskuskatu 1",
  "townCity": "Helsinki",
  "updatedAt": Any<String>,
  "updatedBy": "admin",
}
`;

exports[`Db query member tests getMemberRoles should return roles for given valid member 1`] = `
[
  "USER",
  "INSTRUCTOR",
]
`;

exports[`Db query member tests getMembers should return members 1`] = `
[
  {
    "memberId": 1,
    "name": "Matti Virtanen",
    "phoneNumber": "0401234567",
  },
  {
    "memberId": 2,
    "name": "Liisa Korhonen",
    "phoneNumber": "0412345678",
  },
  {
    "memberId": 3,
    "name": "Jukka Nieminen",
    "phoneNumber": "0423456789",
  },
  {
    "memberId": 4,
    "name": "Anna Mäkinen",
    "phoneNumber": "0434567890",
  },
  {
    "memberId": 5,
    "name": "Pekka Hämäläinen",
    "phoneNumber": "0445678901",
  },
  {
    "memberId": 6,
    "name": "Kaisa Laine",
    "phoneNumber": "0456789012",
  },
  {
    "memberId": 7,
    "name": "Antti Heikkinen",
    "phoneNumber": "0467890123",
  },
  {
    "memberId": 8,
    "name": "Sanna Koskinen",
    "phoneNumber": "0478901234",
  },
  {
    "memberId": 9,
    "name": "Juha Seppälä",
    "phoneNumber": "0489012345",
  },
  {
    "memberId": 10,
    "name": "Marja Salminen",
    "phoneNumber": "0490123456",
  },
]
`;
